# WL-IDE-setup

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  GUIDELINES.md  LICENSE  README.md  pyproject.toml  requirements.txt
.wl-cli-test/: .gitignore  CLAUDE.md  WHOLELOOP.md
.wl-cli-test/.github/: copilot-instructions.md
agents/skills/: README.md
docs/: ARCHITECTURE.md  CLI.md  IDE_CLAUDE_CODE.md  IDE_CURSOR.md  IDE_SETUP.md  IDE_VSCODE.md  PROJECT_CONVENTIONS.md  PUBLISHING_CLI.md  REFERENCE_IMPLEMENTATION.md  SETUP_NEW_PROJECT.md  TRACKERS.md  WORKFLOW_PRODUCT_LINEAR.md
install/: README.md  copy-skills-to-repo.sh
product-template/: .gitignore  .wholeloop-product-template  CLAUDE.md  README.md
product-template/Agents/: README.md  brainstorm-feature.md  build-spec.md  maintain-roadmap.md  synthesize-interview.md  synthesize-meeting.md  synthesize-survey.md
product-template/Analytics/: README.md
product-template/Context/: README.md  analytics-snapshot.md  capabilities-inventory.md  data-model-snapshot.md  icp-profiles.md  org-repositories.md  product-baseline.md  roadmap-snapshot.md  shipped-inventory.md  signals-sources.md  sources-index.md
references/: CLAUDE.template.md  PROJECT_CONVENTIONS.template.md  SPEC.template.md  WHOLELOOP.template.md  WHOLELOOP_CURSOR_RULE.template.mdc  copilot-instructions.template.md
wholeloop/: __init__.py  __main__.py  assets.py  build_product_template.py  cli.py  config.py  conventions.py  doctor.py  install.py  link.py  names.py  pipeline.py  product_install.py  prompts.py  setup.py  version_check.py
(+49 files in other folders)
